refactor: dynamically build sql